Overlap of DEGs from Schaukowitch 2017, Boulting 2020, and Velmeshev 2019

--- a/Homeostatic-Plasticity-Geneset.ipynb
+++ b/Homeostatic-Plasticity-Geneset.ipynb
@@ -348,9 +348,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "asdenv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "asdenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -364,12 +364,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "f927a592a2e2a853267b03d008cc8d203e1f4fc1838d27b769cb82576a190462"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
