--- a/Homeostatic-Plasticity-Geneset.ipynb
+++ b/Homeostatic-Plasticity-Geneset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,150 +42,21 @@
     "                                '9-4G 2hr ASDgenes',\n",
     "                                '9-4G 4hr ASDgenes',\n",
     "                                '9-scRNAseq inducible ASD']);\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Table S1: Gene symbols of differentially regulated genes in each condition</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Upregulated Genes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Downregulated Genes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Bidirectional Genes</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Bic</td>\n",
-       "      <td>TTX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Bic</td>\n",
-       "      <td>TTX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Bic UP/TTX Down</td>\n",
-       "      <td>TTX UP/Bic Down</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>FOSB</td>\n",
-       "      <td>IER5L</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MYCN</td>\n",
-       "      <td>KCNJ2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADAM19</td>\n",
-       "      <td>IER5L</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NPAS4</td>\n",
-       "      <td>TXNIP</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>INSM1</td>\n",
-       "      <td>PTGS2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADAMTS8</td>\n",
-       "      <td>KLF10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Table S1: Gene symbols of differentially regulated genes in each condition   \n",
-       "0                                                NaN                          \\\n",
-       "1                                  Upregulated Genes                           \n",
-       "2                                                Bic                           \n",
-       "3                                               FOSB                           \n",
-       "4                                              NPAS4                           \n",
-       "\n",
-       "  Unnamed: 1  Unnamed: 2           Unnamed: 3 Unnamed: 4  Unnamed: 5   \n",
-       "0        NaN         NaN                  NaN        NaN         NaN  \\\n",
-       "1        NaN         NaN  Downregulated Genes        NaN         NaN   \n",
-       "2        TTX         NaN                  Bic        TTX         NaN   \n",
-       "3      IER5L         NaN                 MYCN      KCNJ2         NaN   \n",
-       "4      TXNIP         NaN                INSM1      PTGS2         NaN   \n",
-       "\n",
-       "            Unnamed: 6       Unnamed: 7  \n",
-       "0                  NaN              NaN  \n",
-       "1  Bidirectional Genes              NaN  \n",
-       "2      Bic UP/TTX Down  TTX UP/Bic Down  \n",
-       "3               ADAM19            IER5L  \n",
-       "4              ADAMTS8            KLF10  "
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2 = pd.read_excel('/Users/alec/Dropbox/Mac/Documents/Fraenkel_Farhi_Lab/ASD_Experiments/Analysis/Schaukowitch_2017_Differential_RNA.xlsx'); \n",
     "\n",
-    "df2.head()"
+    "df2 = pd.read_excel('/Users/alec/Dropbox/Mac/Documents/Fraenkel_Farhi_Lab/ASD_Experiments/Analysis/Schaukowitch_2017_Differential_RNA.xlsx'); "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "239\n",
-      "1518\n"
+      "1518\n",
+      "239\n"
      ]
     }
    ],
@@ -222,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,9 +204,7 @@
     "\n",
     "venn2([set(vel_genes), set(sha_ttx_genes)], set_labels = ('Vel', 'Sha_ttx'), set_colors=('r', 'b'), alpha=0.5)\n",
     "plt.title('Velmeshev DEGs vs Schaukowitch tetrodotoxin induced DEGs') #the variable containing the list of overalp is 'overlap_vel_sha_ttx_genes'\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
